@startuml Диаграмма классов проекта

!theme plain
skinparam classAttributeIconSize 0
skinparam linetype ortho

' Сущности предметной области
class User {
  - id: string
  - username: string
  - password_hash: string
  - created_at: Date
  + transactions: Transaction[]
  + categories: Category[]
}

class Transaction {
  - id: string
  - amount: number
  - type: 'income' | 'expense'
  - note: string
  - created_at: Date
  + user: User
  + category: Category | null
}

class Category {
  - id: string
  - name: string
  - type: 'income' | 'expense'
  - created_at: Date
  + user: User
}

' Repository Pattern
abstract class AbstractRepository<T> {
  + {abstract} findAll(): Promise<T[]>
  + {abstract} findById(id: string): Promise<T | null>
  + {abstract} create(entity: Partial<T>): Promise<T>
  + {abstract} update(id: string, entity: Partial<T>): Promise<T>
  + {abstract} delete(id: string): Promise<boolean>
  + {abstract} findBy(condition: Partial<T>): Promise<T[]>
}

class TransactionRepository extends AbstractRepository<Transaction> {
  - repository: Repository<Transaction>
  + findByUserId(userId: string): Promise<Transaction[]>
  + findByIdAndUserId(id: string, userId: string): Promise<Transaction | null>
}

class CategoryRepository extends AbstractRepository<Category> {
  - repository: Repository<Category>
  + findByUserId(userId: string): Promise<Category[]>
  + findByIdAndUserId(id: string, userId: string): Promise<Category | null>
}

' Strategy Pattern
interface IDataSource {
  + getTransactions(userId: string): Promise<Transaction[]>
  + getTransactionById(id: string, userId: string): Promise<Transaction | null>
  + createTransaction(userId: string, transaction: Partial<Transaction>): Promise<Transaction>
  + getCategories(userId: string): Promise<Category[]>
  + getCategoryById(id: string, userId: string): Promise<Category | null>
  + createCategory(userId: string, category: Partial<Category>): Promise<Category>
  + updateCategory(id: string, userId: string, category: Partial<Category>): Promise<Category>
  + deleteCategory(id: string, userId: string): Promise<boolean>
  + getUserById(id: string): Promise<User | null>
  + getUserByUsername(username: string): Promise<User | null>
  + createUser(user: Partial<User>): Promise<User>
}

class DatabaseDataSource implements IDataSource {
  - transactionsRepository: Repository<Transaction>
  - categoriesRepository: Repository<Category>
  - usersRepository: Repository<User>
}

class MockDataSource implements IDataSource {
  - transactions: Map<string, Transaction>
  - categories: Map<string, Category>
  - users: Map<string, User>
  + clear(): void
}

' Abstract Factory Pattern
abstract class DataSourceFactory {
  + {abstract} createDataSource(): IDataSource
}

class DataSourceFactoryImpl extends DataSourceFactory {
  - configService: ConfigService
  - databaseDataSource: DatabaseDataSource
  - mockDataSource: MockDataSource
  + createDataSource(): IDataSource
  + createDataSourceByType(type: DataSourceType): IDataSource
}

enum DataSourceType {
  DATABASE
  MOCK
}

' Observer Pattern
interface ITransactionObserver {
  + onTransactionCreated(transaction: Transaction): Promise<void> | void
  + onTransactionUpdated(transaction: Transaction): Promise<void> | void
  + onTransactionDeleted(transactionId: string): Promise<void> | void
}

abstract class AbstractTransactionObserver implements ITransactionObserver {
  + onTransactionCreated(transaction: Transaction): Promise<void> | void
  + onTransactionUpdated(transaction: Transaction): Promise<void> | void
  + onTransactionDeleted(transactionId: string): Promise<void> | void
}

class AnalyticsObserver extends AbstractTransactionObserver {
  - logger: Logger
  + onTransactionCreated(transaction: Transaction): void
  + onTransactionUpdated(transaction: Transaction): void
  + onTransactionDeleted(transactionId: string): void
}

class TransactionSubject {
  - observers: ITransactionObserver[]
  + attach(observer: ITransactionObserver): void
  + detach(observer: ITransactionObserver): void
  + notifyTransactionCreated(transaction: Transaction): Promise<void>
  + notifyTransactionUpdated(transaction: Transaction): Promise<void>
  + notifyTransactionDeleted(transactionId: string): Promise<void>
}

' Сервисы
class TransactionsService {
  - transactionsRepository: Repository<Transaction>
  - categoriesRepository: Repository<Category>
  - transactionSubject: TransactionSubject
  + create(userId: string, createTransactionDto: ICreateTransactionDto): Promise<string>
  + findAll(userId: string): Promise<Transaction[]>
  + findOne(id: string, userId: string): Promise<Transaction>
  + getFinancialAnalytics(userId: string, startDate?: string, endDate?: string): Promise<FinancialAnalyticsDto>
  + getCategoryAnalytics(userId: string, startDate?: string, endDate?: string): Promise<CategoryAnalyticsDto[]>
}

class CategoriesService {
  - categoriesRepository: Repository<Category>
  - categoryRepository: CategoryRepository
  + create(userId: string, createCategoryDto: CreateCategoryDto): Promise<string>
  + findAll(userId: string): Promise<Category[]>
  + findOne(id: string, userId: string): Promise<Category>
  + update(id: string, userId: string, updateCategoryDto: UpdateCategoryDto): Promise<string>
  + delete(id: string, userId: string): Promise<string>
}

' Связи между классами
User "1" *-- "many" Transaction : has
User "1" *-- "many" Category : has
Transaction "many" --> "0..1" Category : belongs to

TransactionRepository ..> Transaction : uses
CategoryRepository ..> Category : uses

DatabaseDataSource ..> Transaction : uses
DatabaseDataSource ..> Category : uses
DatabaseDataSource ..> User : uses
MockDataSource ..> Transaction : uses
MockDataSource ..> Category : uses
MockDataSource ..> User : uses

DataSourceFactoryImpl ..> DatabaseDataSource : creates
DataSourceFactoryImpl ..> MockDataSource : creates
DataSourceFactoryImpl ..> DataSourceType : uses

TransactionSubject "1" o-- "many" ITransactionObserver : notifies
AnalyticsObserver ..|> ITransactionObserver : implements

TransactionsService ..> Transaction : uses
TransactionsService ..> TransactionSubject : uses
TransactionsService --> TransactionRepository : uses
CategoriesService --> CategoryRepository : uses

note right of AbstractRepository
  **Repository Pattern**
  Абстракция для работы с данными
end note

note right of IDataSource
  **Strategy Pattern**
  Разные стратегии источников данных
end note

note right of DataSourceFactory
  **Abstract Factory Pattern**
  Создание источников данных
end note

note right of TransactionSubject
  **Observer Pattern**
  Уведомление наблюдателей о событиях
end note

@enduml
